{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 416,
  "lineage": "cf666e11-597d-3614-3864-827148897b49",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:vpc/vpc-ece48a87",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-bbebbed0",
            "default_route_table_id": "rtb-e67b4d8d",
            "default_security_group_id": "sg-8f2dacc5",
            "dhcp_options_id": "dopt-fa480b91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-ece48a87",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-e67b4d8d",
            "owner_id": "643965814769",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nginx-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0093842b77ecce0ed",
            "domain": "vpc",
            "id": "eipalloc-06a38d9ec85be7dca",
            "instance": "i-0d87afbd7a413873c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-057767780c2b95a64",
            "private_dns": "ip-172-31-25-17.us-east-2.compute.internal",
            "private_ip": "172.31.25.17",
            "public_dns": "ec2-3-18-200-141.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.200.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-block1"
            },
            "tags_all": {
              "Name": "eip-block1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.nginx_wb",
            "aws_key_pair.nginx_key",
            "aws_security_group.sgweb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00eaa137dca814684",
            "domain": "vpc",
            "id": "eipalloc-0924d94b0ef3e9761",
            "instance": "i-01ee9e934d2e186d2",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c071b4089a4811c3",
            "private_dns": "ip-172-31-26-22.us-east-2.compute.internal",
            "private_ip": "172.31.26.22",
            "public_dns": "ec2-18-220-148-216.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.148.216",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-block2"
            },
            "tags_all": {
              "Name": "eip-block2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.nginx_wb",
            "aws_key_pair.nginx_key",
            "aws_security_group.sgweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_wb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0650ec2a12946c040",
            "arn": "arn:aws:ec2:us-east-2:643965814769:instance/i-0d87afbd7a413873c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d87afbd7a413873c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-057767780c2b95a64",
            "private_dns": "ip-172-31-25-17.us-east-2.compute.internal",
            "private_ip": "172.31.25.17",
            "public_dns": "ec2-3-142-247-6.us-east-2.compute.amazonaws.com",
            "public_ip": "3.142.247.6",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ae630f8bf988f78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc_nginx_web"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-5f814e22",
            "tags": {
              "Name": "nginx-webserver0"
            },
            "tags_all": {
              "Name": "nginx-webserver0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090d2f0f75624661f"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.nginx_key",
            "aws_security_group.sgweb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0650ec2a12946c040",
            "arn": "arn:aws:ec2:us-east-2:643965814769:instance/i-01ee9e934d2e186d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01ee9e934d2e186d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c071b4089a4811c3",
            "private_dns": "ip-172-31-26-22.us-east-2.compute.internal",
            "private_ip": "172.31.26.22",
            "public_dns": "ec2-13-58-253-72.us-east-2.compute.amazonaws.com",
            "public_ip": "13.58.253.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-099963453a7164840",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "vpc_nginx_web"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-5f814e22",
            "tags": {
              "Name": "nginx-webserver1"
            },
            "tags_all": {
              "Name": "nginx-webserver1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-090d2f0f75624661f"
            ]
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_key_pair.nginx_key",
            "aws_security_group.sgweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "aws-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:loadbalancer/app/nginx-alb/84c83a4e4a7bc4fc",
            "arn_suffix": "app/nginx-alb/84c83a4e4a7bc4fc",
            "dns_name": "nginx-alb-1066890798.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:643965814769:loadbalancer/app/nginx-alb/84c83a4e4a7bc4fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-alb",
            "security_groups": [
              "sg-090d2f0f75624661f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-5f814e22"
              },
              {
                "subnet_id": "subnet-600d9b0b"
              },
              {
                "subnet_id": "subnet-d307309f"
              }
            ],
            "subnets": [
              "subnet-5f814e22",
              "subnet-600d9b0b",
              "subnet-d307309f"
            ],
            "tags": {
              "Name": "nginx-alb"
            },
            "tags_all": {
              "Name": "nginx-alb"
            },
            "vpc_id": "vpc-ece48a87",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.sgweb",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx-alb-listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:listener/app/nginx-alb/84c83a4e4a7bc4fc/44dc60dea3fe584f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:643965814769:listener/app/nginx-alb/84c83a4e4a7bc4fc/44dc60dea3fe584f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:loadbalancer/app/nginx-alb/84c83a4e4a7bc4fc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.aws-alb",
            "aws_lb_target_group.nginx-target-group",
            "aws_security_group.sgweb",
            "data.aws_subnet_ids.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5",
            "arn_suffix": "targetgroup/nginx-tg/b5ad0bce534337b5",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-ece48a87"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb-target-group-attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5-20210830004544239600000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5",
            "target_id": "i-0d87afbd7a413873c"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.nginx_wb",
            "aws_key_pair.nginx_key",
            "aws_lb_target_group.nginx-target-group",
            "aws_security_group.sgweb"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5-20210830004544213300000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:643965814769:targetgroup/nginx-tg/b5ad0bce534337b5",
            "target_id": "i-01ee9e934d2e186d2"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_instance.nginx_wb",
            "aws_key_pair.nginx_key",
            "aws_lb_target_group.nginx-target-group",
            "aws_security_group.sgweb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgweb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:643965814769:security-group/sg-090d2f0f75624661f",
            "description": "Allow incoming HTTP connections \u0026 SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-090d2f0f75624661f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc_nginx_web",
            "name_prefix": "",
            "owner_id": "643965814769",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server SG"
            },
            "tags_all": {
              "Name": "Web Server SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-ece48a87"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}